--- a/EasyConsole/Properties/Resources.fr-FR.resx
+++ b/EasyConsole/Properties/Resources.fr-FR.resx
@@ -118,54 +118,51 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BackupCompletion" xml:space="preserve">
-    <value>Last Backup completion</value>
+    <value>Dernière sauvegarde</value>
   </data>
   <data name="BackupType" xml:space="preserve">
-    <value>Type of Backup</value>
+    <value>Type de sauvegarde</value>
   </data>
   <data name="CreateSaveButton" xml:space="preserve">
-    <value>Create Save</value>
+    <value>Créer une sauvegarde</value>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Delete</value>
+    <value>Supprimer</value>
   </data>
   <data name="Destination" xml:space="preserve">
     <value>Destination</value>
   </data>
   <data name="LanguageOption" xml:space="preserve">
-    <value>Choose your language</value>
+    <value>Choissisez votre langue</value>
   </data>
   <data name="Modify" xml:space="preserve">
-    <value>Modify</value>
+    <value>Modifier</value>
   </data>
   <data name="MonoSaveRow" xml:space="preserve">
-    <value>Mono Save</value>
+    <value>Sauvegarde unique</value>
   </data>
   <data name="SaveName" xml:space="preserve">
-    <value>Save Name</value>
+    <value>Nom du travail de sauvegarde</value>
   </data>
   <data name="SequentialSaveRow" xml:space="preserve">
-    <value>Sequential Save</value>
+    <value>Sauvegarde séquentielle</value>
   </data>
   <data name="Source" xml:space="preserve">
     <value>Source</value>
   </data>
   <data name="StartButton" xml:space="preserve">
-    <value>START</value>
+    <value>Démarrer</value>
   </data>
   <data name="StartSaveButton" xml:space="preserve">
-    <value>Start Save</value>
+    <value>Démarrer la sauvegarde</value>
   </data>
   <data name="StartSequentialSaveButton" xml:space="preserve">
-    <value>Start Sequential Save</value>
+    <value>Démarrer la sauvegarder séquentielle</value>
   </data>
   <data name="TitleSave" xml:space="preserve">
-    <value>Add / Modify your element</value>
+    <value>Ajouter / Modifier un élément</value>
   </data>
   <data name="WelcomeMessage" xml:space="preserve">
-    <value>hey</value>
-  </data>
-  <data name="WelcomeMessage1" xml:space="preserve">
-    <value>Welcome to our backup software</value>
+    <value>Bienvenue dans notre logiciel de sauvegarde</value>
   </data>
 </root>
