--- a/EasyConsole/Properties/Resources.en-US.resx
+++ b/EasyConsole/Properties/Resources.en-US.resx
@@ -123,6 +123,9 @@
   <data name="BackupType" xml:space="preserve">
     <value>Type of Backup</value>
   </data>
+  <data name="checkDelete" xml:space="preserve">
+    <value>Do you want to delete this save?</value>
+  </data>
   <data name="CreateSaveButton" xml:space="preserve">
     <value>Create Save</value>
   </data>
