--- a/EasyConsole/Properties/Resources.fr-FR.resx
+++ b/EasyConsole/Properties/Resources.fr-FR.resx
@@ -123,6 +123,12 @@
   <data name="BackupType" xml:space="preserve">
     <value>Type de sauvegarde</value>
   </data>
+  <data name="checkDelete" xml:space="preserve">
+    <value>Voulez-vous supprimer ce travail de sauvegarde?</value>
+  </data>
+  <data name="Confirmation" xml:space="preserve">
+    <value>Confirmation</value>
+  </data>
   <data name="CreateSaveButton" xml:space="preserve">
     <value>Créer une sauvegarde</value>
   </data>
@@ -132,6 +138,9 @@
   <data name="Destination" xml:space="preserve">
     <value>Destination</value>
   </data>
+  <data name="error" xml:space="preserve">
+    <value>Erreur</value>
+  </data>
   <data name="LanguageOption" xml:space="preserve">
     <value>Choissisez votre langue</value>
   </data>
@@ -140,6 +149,9 @@
   </data>
   <data name="MonoSaveRow" xml:space="preserve">
     <value>Sauvegarde unique</value>
+  </data>
+  <data name="processRunning" xml:space="preserve">
+    <value>Le logiciel d'entreprise est lancé, vous ne pouvez pas démarrer de sauvegarde.</value>
   </data>
   <data name="SaveName" xml:space="preserve">
     <value>Nom du travail de sauvegarde</value>
