--- a/EasyConsole/Properties/Resources.resx
+++ b/EasyConsole/Properties/Resources.resx
@@ -123,6 +123,12 @@
   <data name="BackupType" xml:space="preserve">
     <value>Type of Backup</value>
   </data>
+  <data name="checkDelete" xml:space="preserve">
+    <value>Do you want to delete this save?</value>
+  </data>
+  <data name="Confirmation" xml:space="preserve">
+    <value>Confirmation</value>
+  </data>
   <data name="CreateSaveButton" xml:space="preserve">
     <value>Create Save</value>
   </data>
@@ -132,6 +138,9 @@
   <data name="Destination" xml:space="preserve">
     <value>Destination</value>
   </data>
+  <data name="error" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="LanguageOption" xml:space="preserve">
     <value>Choose your language</value>
   </data>
@@ -140,6 +149,9 @@
   </data>
   <data name="MonoSaveRow" xml:space="preserve">
     <value>Mono Save</value>
+  </data>
+  <data name="processRunning" xml:space="preserve">
+    <value>The business software is launched you cannot start a backup</value>
   </data>
   <data name="SaveName" xml:space="preserve">
     <value>Save Name</value>
